capstone/tf-3/cdo-1/gitops/manifests/base/webhook-receiver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-receiver
  labels:
    app: webhook-receiver
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  type: ClusterIP
  selector:
    app: webhook-receiver
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
